createUser/jsonwebtoken : arrumar as migrações do typeorm =>Erro
