# src/modules/cars/entities/Specification.ts
@@ -1,9 +1,19 @@
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 import { v4 as uuidV4 } from 'uuid';
 
+@Entity("Specifications")
 class Specification {
+    
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name!: string;
+
+    @Column()
     description!: string;
+
+    @CreateDateColumn()
     created_at!: Date;
 
     constructor() {
